# spidermonkey-embedding-examples

./: .clang-format  .gitattributes  LICENSE  README.md  custom-architecture-questionnaire.md  meson.build
.github/workflows/: build.yml
docs/: Building SpiderMonkey.md  Bytecodes.md  Custom Objects.md  Debugging Tips.md  Exceptions.md  GC Rooting Guide.md  Garbage Collection.md  JSAPI Introduction.md  Migration Guide.md  Miscellaneous.md  README.md  Value.md
examples/: README.md  boilerplate.cpp  boilerplate.h  cookbook.cpp  hello.cpp  modules.cpp  repl.cpp  resolve.cpp  stencils.cpp  tracing.cpp  version.cpp  wasm.cpp  weakref.cpp  worker.cpp
tools/: generic_lib.sh  get_sm.sh  get_sm_102.sh  get_sm_78.sh  get_sm_91.sh  jsopcode.py  make_opcode_doc.py
